# attribution-mcp

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run.py
libs/attribution-cache/: README.md  pyproject.toml
libs/attribution-cache/src/attribution_cache/: __init__.py  cache.py
libs/attribution-schema/: README.md  pyproject.toml
libs/attribution-schema/src/attribution_schema/: __init__.py  schema.py
scripts/: gsc_oauth.py  run_gemini.py  test_connectors.py
specs/: 001-multi-platform-connectors.md  index.md
