[project]
name = "attribution-mcp"
version = "1.0.0"
description = "MCP servers for social media and analytics platforms"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
keywords = ["mcp", "umami", "analytics", "model-context-protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
umami-mcp = "umami_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["packages/umami-mcp/src/umami_mcp"]

[tool.uv.workspace]
members = [
    "packages/umami-mcp",
    "packages/gsc-mcp",
    "packages/bluesky-mcp",
    "packages/mastodon-mcp",
    "packages/linkedin-mcp",
    "packages/instagram-mcp",
    "packages/youtube-mcp",
    "libs/attribution-schema",
    "libs/attribution-cache",
]
