[project]
name = "attribution-cache"
version = "0.1.0"
description = "SQLite caching for analytics data"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
dependencies = [
    "sqlite-utils>=3.0.0",
    "attribution-schema>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/attribution_cache"]
