[project]
name = "attribution-schema"
version = "0.1.0"
description = "Unified data models for multi-platform analytics"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
dependencies = [
    "pydantic>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/attribution_schema"]
